--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^1.0.1",
     "jszip": "^3.1.5",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.4",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
