--- a/backend/test/fixtures/books.yml
+++ b/backend/test/fixtures/books.yml
@@ -1,11 +1,42 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: one
-  barcode: MyString
-  status: MyString
+book_5000:
+  title_id: 1
+  barcode: '5000'
+  status: Broken
+  created_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: &1 2019-12-03 22:23:05.412194000 Z
+    zone: &2 !ruby/object:ActiveSupport::TimeZone
+      name: Etc/UTC
+    time: *1
+  updated_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: *1
+    zone: *2
+    time: *1
 
-two:
-  title: two
-  barcode: MyString
-  status: MyString
+book_0001:
+  title_id: 1
+  barcode: '0001'
+  status: OK
+  created_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: &1 2019-12-03 22:23:05.452759000 Z
+    zone: &2 !ruby/object:ActiveSupport::TimeZone
+      name: Etc/UTC
+    time: *1
+  updated_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: *1
+    zone: *2
+    time: *1
+
+book_0002:
+  title_id: 1
+  barcode: '0002'
+  status: OK
+  created_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: &1 2019-12-03 22:23:05.455775000 Z
+    zone: &2 !ruby/object:ActiveSupport::TimeZone
+      name: Etc/UTC
+    time: *1
+  updated_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: *1
+    zone: *2
+    time: *1
