--- a/backend/test/fixtures/loans.yml
+++ b/backend/test/fixtures/loans.yml
@@ -1,11 +1,17 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user: one
-  user: one
-  return_at: 2018-11-20
-
-two:
-  user: two
-  user: two
-  return_at: 2018-11-20
+loan_1:
+  id: 1
+  loaned_by_id: 1968097915
+  lent_by_id: 1904583927
+  book_id: '5000'
+  returned_at: 
+  created_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: &1 2019-12-03 22:23:05.442541000 Z
+    zone: &2 !ruby/object:ActiveSupport::TimeZone
+      name: Etc/UTC
+    time: *1
+  updated_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: *1
+    zone: *2
+    time: *1
+  expiration_date: 2019-12-03
