--- a/backend/test/fixtures/titles.yml
+++ b/backend/test/fixtures/titles.yml
@@ -1,13 +1,16 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  isbn: MyString
-  cost: 1
-  type: 
-
-two:
-  name: MyString
-  isbn: MyString
-  cost: 1
-  type: 
+title_1:
+  id: 1
+  name: Programming for dummies
+  isbn: 420-420
+  cost: 200
+  title_type: Skönlitteratur
+  created_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: &1 2019-12-03 22:23:05.392128000 Z
+    zone: &2 !ruby/object:ActiveSupport::TimeZone
+      name: Etc/UTC
+    time: *1
+  updated_at: !ruby/object:ActiveSupport::TimeWithZone
+    utc: *1
+    zone: *2
+    time: *1
