--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service lint ; vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "lintnf": "vue-cli-service lint --no-fix"
   },
@@ -12,6 +13,7 @@
     "@types/file-saver": "^2.0.0",
     "@types/jquery": "^3.3.22",
     "@types/jszip": "^3.1.4",
+    "@types/lodash": "^4.14.149",
     "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.11",
@@ -19,6 +21,7 @@
     "file-saver": "^2.0.0",
     "jsbarcode": "^3.11.0",
     "jszip": "^3.1.5",
+    "lodash": "^4.17.15",
     "vue": "^2.5.17",
     "vue-authenticate": "^1.3.4",
     "vue-axios": "^2.1.4",
@@ -31,9 +34,12 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.19",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-typescript": "^3.0.3",
+    "@vue/cli-plugin-unit-jest": "^4.1.1",
     "@vue/cli-service": "^3.0.3",
+    "@vue/test-utils": "1.0.0-beta.29",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "typescript": "^3.0.0",
