--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@ backend/config/secrets.yml
 *.orig
 rerun.txt
 pickle-email-*.html
-
-
-.DS_Store
+coverage/
+.vscode/
+**/*.DS_Store
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 #config/initializers/secret_token.rb
