--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "vue-property-decorator": "^7.0.0",
     "vue-resize-directive": "^1.1.4",
     "vue-router": "^3.0.1",
+    "vuetify": "^2.1.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
@@ -41,10 +42,13 @@
     "@vue/cli-service": "^3.0.3",
     "@vue/test-utils": "1.0.0-beta.29",
     "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
     "typescript": "^3.0.0",
     "vue-cli-plugin-pug": "^1.0.7",
-    "vue-template-compiler": "^2.5.17"
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.5.17",
+    "vuetify-loader": "^1.3.0"
   },
   "postcss": {
     "plugins": {
