--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "jsbarcode": "^3.11.0",
     "jszip": "^3.1.5",
     "lodash": "^4.17.15",
+    "newman": "^4.5.7",
     "vue": "^2.5.17",
     "vue-authenticate": "^1.3.4",
     "vue-axios": "^2.1.4",
@@ -47,9 +48,9 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "cypress": "^3.7.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^5.0.0",
-    "cypress": "^3.7.0",
     "node-sass": "^4.9.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
