--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -1,6 +1,8 @@
 name: postman
 
-on: push
+on:
+  schedule:
+  - cron: "0 0 * * *"
 
 jobs: 
   newman:
@@ -9,8 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-#    - name: Checkout develop
- #     run: git checkout develop
+    - name: Checkout develop
+      run: git checkout develop
     - uses: actions/setup-node@v1
       with:
         node-version: '12.x'
