--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   cc:
-    if: github.event_name == "schedule"
+    if: github.event_name == schedule
     runs-on: ubuntu-latest
 
     steps:
