--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lintnf": "vue-cli-service lint src/ --no-fix --max-warnings 1"
   },
   "dependencies": {
+    "@bartvanvliet/vuex-module-decorators": "github:itggot-TE4/vuex-module-decorators",
     "@types/file-saver": "^2.0.0",
     "@types/jquery": "^3.3.22",
     "@types/jszip": "^3.1.4",
@@ -17,6 +18,7 @@
     "@vue/composition-api": "^1.0.0-beta.21",
     "axios": "^0.18.1",
     "css-loader": "^1.0.1",
+    "cypress-downloadfile": "^1.2.0",
     "file-saver": "^2.0.0",
     "jsbarcode": "^3.11.0",
     "jszip": "^3.1.5",
@@ -46,6 +48,7 @@
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "cypress": "^3.7.0",
+    "cypress-file-upload": "^4.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.13.1",
