--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "@vue/cli-plugin-unit-jest": "^4.1.1",
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-typescript": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/test-utils": "^1.1.1",
     "cypress": "^3.7.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^5.0.0",
@@ -54,6 +54,7 @@
     "typescript": "^3.0.0",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.5.17",
     "vuetify-loader": "^1.3.0"
   },
