--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -20,27 +20,11 @@ jobs:
         cd frontend
         yarn install
         yarn build --silent
-    - uses: actions/cache@v2
-      id: cache
-      with:
-        path: ~/local/rubies
-        key: ${{ runner.os }}-ruby-2.6.3
-    - uses: clupprich/ruby-build-action@master
-      id: ruby
+    - uses: ruby/setup-ruby@v1.59.1
+      working-directory: backend
       with:
         ruby-version: 2.6.3
-        cache-available: ${{ steps.cache.outputs.cache-hit == 'true' }}
-    - uses: actions/cache@v2
-      with:
-        path: backend/vendor/bundle
-        key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gem-
-    - name: Bundle install
-      run: |
-        cd backend
-        sudo apt-get -yqq install libsqlite3-dev
-        bundle install --jobs=4 --retry=3 --path vendor/bundle
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Load database from schema
       run: |
         cd backend
