--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -61,26 +61,11 @@ jobs:
       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
-      id: cache
-      with:
-        path: ~/local/rubies
-        key: ${{ runner.os }}-ruby-2.6.3
-    - uses: clupprich/ruby-build-action@master
-      id: ruby
+    - uses: ruby/setup-ruby@v1.59.1
+      working-directory: backend
       with:
         ruby-version: 2.6.3
-        cache-available: ${{ steps.cache.outputs.cache-hit == 'true' }}
-    - uses: actions/cache@v2
-      with:
-        path: backend/vendor/bundle
-        key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gem-
-    - name: Bundle install
-      run: |
-        cd backend
-        bundle install --jobs=4 --retry=3 --path vendor/bundle
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Load fixtures and schema
       env:
         RAILS_ENV: test
