--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -16,7 +16,6 @@ gem "sass-rails"
 gem "uglifier"
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'mini_racer', platforms: :ruby
-
 # Use CoffeeScript for .coffee assets and views
 gem "coffee-rails"
 # Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
@@ -43,6 +42,8 @@ gem "rack-cors"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
+  gem "factory_bot_rails"
+  gem "faker"
   gem "byebug", platforms: [:mri, :mingw, :x64_mingw]
 end
 
