--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - bundles:/bundle
     environment:
       - BUNDLE_PATH=/bundle/vendor
+      - RAILS_ENV=test
     ports:
       - "3000:3000"
   frontend:
