--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -116,3 +116,38 @@ jobs:
       env:
         COLLECTION_UID_YABS: ${{secrets.COLLECTION_UID_YABS}}
         POSTMAN_KEY: ${{secrets.POSTMAN_KEY}}
+  lighthouse:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm install -g @lhci/cli@0.6.x
+          yarn install
+          yarn build --silent
+      - uses: ruby/setup-ruby@v1.59.1
+        with:
+          ruby-version: 2.6.3
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          working-directory: backend
+      - name: Load fixtures and schema
+        env:
+          RAILS_ENV: test
+        run: |
+          cd backend
+          bundle exec bin/rails db:schema:load
+          bundle exec bin/rails db:fixtures:load
+      - name: Run rails backend
+        env:
+          RAILS_ENV: test
+        run: |
+          cd backend
+          bundle exec bin/rails s &
+      - name: Run Lighthouse CI
+        working-directory: frontend
+        run: |
+          lhci autorun
