Prepare for github annotations

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -150,5 +150,7 @@ jobs:
           cd backend
           bundle exec bin/rails s &
       - name: Run Lighthouse CI
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
         run: |
           lhci autorun
