--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -6,8 +6,6 @@ ruby "2.6.3"
 gem "google-api-client"
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem "rails", "6.0.1"
-# Use sqlite3 as the database for Active Record
-gem "sqlite3"
 # Use Puma as the app server
 gem "puma"
 # Use SCSS for stylesheets
@@ -24,6 +22,8 @@ gem "turbolinks"
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem "jbuilder"
 gem "google_books"
+# Use Postgres as the ActiveRecords database
+gem "pg"
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
