--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: "3.8"
 services:
+  database:
+    image: postgres
+    volumes:
+      - ./tmp/db:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: password
   backend:
     build: ./backend
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
@@ -10,6 +16,8 @@ services:
       - BUNDLE_PATH=/bundle/vendor
     ports:
       - "3000:3000"
+    depends_on:
+      - database
   frontend:
     build: ./frontend
     command: bash -c "yarn run serve"
