--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -8,6 +8,17 @@ on:
 jobs:
   e2e:
     runs-on: ubuntu-latest
+    services: 
+      postgres:
+        image: postgres:13.1
+        env:
+          POSTGRES_DB: yabs_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-interval 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
@@ -24,6 +35,8 @@ jobs:
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
         working-directory: backend
     - name: Load database from schema
+      env:
+          RAILS_ENV: test
       run: |
         cd backend
         bundle exec bin/rails db:schema:load
@@ -55,6 +68,17 @@ jobs:
         path: frontend/cypress/videos
   api-tests:
     runs-on: ubuntu-latest
+    services: 
+      postgres:
+        image: postgres:13.1
+        env:
+          POSTGRES_DB: yabs_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-interval 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1.59.1
@@ -83,6 +107,17 @@ jobs:
         POSTMAN_KEY: ${{secrets.POSTMAN_KEY}}
   lighthouse:
     runs-on: ubuntu-latest
+    services: 
+      postgres:
+        image: postgres:13.1
+        env:
+          POSTGRES_DB: yabs_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-interval 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
