--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -1,9 +1,3 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -22,6 +16,8 @@ development:
 test:
   <<: *default
   database: yabs_test
+  host: localhost
+  port: 5432
 
 production:
   <<: *default
