--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - bundles:/bundle
     environment:
       - BUNDLE_PATH=/bundle/vendor
+      - POSTGRES_HOST=database
     ports:
       - "3000:3000"
     depends_on:
