--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@vue/composition-api": "^1.0.0-beta.21",
     "axios": "^0.18.1",
     "css-loader": "^1.0.1",
+    "cypress-downloadfile": "^1.2.0",
     "file-saver": "^2.0.0",
     "jsbarcode": "^3.11.0",
     "jszip": "^3.1.5",
@@ -46,6 +47,7 @@
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "cypress": "^3.7.0",
+    "cypress-file-upload": "^4.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.13.1",
