--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "docsify": "^4.9.4",
-    "husky": "^5.0.6",
+    "husky": "^4.3.7",
     "lint-staged": "^10.5.3"
   },
   "gitHooks": {
@@ -14,7 +14,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
-      "vue-cli-service lint --fix",
+      "cd frontend && vue-cli-service lint --fix",
       "git add ."
     ]
   }
