--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,3 +3,4 @@ engines:
       enabled: false
       exclude_paths:
         - frontend/src/store/modules/__mocks__/
+        - frontend/src/components/__tests__/
