--- a/backend/.rubocop.yml
+++ b/backend/.rubocop.yml
@@ -10,6 +10,8 @@ AllCops:
 
 Layout/LineLength:
   Max: 125
+  Exclude:
+    - config/initializers/omniauth.rb
 
 Style/SymbolArray:
   EnforcedStyle: brackets
