Actually fix syntax error

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,21 +1,21 @@
 version: "2"
 exclude_patterns:
-  - config/
-  - db/
-  - dist/
-  - **/src/api/
-  - features/
-  - **/node_modules/
-  - script/
-  - **/spec/
-  - **/__test__/
-  - **/__tests__/
-  - **/__mocks__/
-  - Tests/
-  - **/vendor/
-  - **/*_test.go
-  - **/*.d.ts
-  - **/cypress/
-  - **/helpers/
-  - **/controllers/
-  - **/services/
+  - "config/"
+  - "db/"
+  - "dist/"
+  - "**/src/api/"
+  - "features/"
+  - "**/node_modules/"
+  - "script/"
+  - "**/spec/"
+  - "**/__test__/"
+  - "**/__tests__/"
+  - "**/__mocks__/"
+  - "Tests/"
+  - "**/vendor/"
+  - "**/*_test.go"
+  - "**/*.d.ts"
+  - "**/cypress/"
+  - "**/helpers/"
+  - "**/controllers/"
+  - "**/services/"
